# vista2xp

./: .gitignore  .gitmodules  .ninja_deps  .ninja_log  CMakeLists.txt  LICENSE.txt  License.txt  README.md  README.txt  READMEJP.txt  ShellItemArray.cpp  ShellItemArray.hpp  build.ninja  installer.iss  logging.h  pack.bat  rules.ninja  strsafe.h  supported.txt
data/: xp-to-10.diff  xp-to-10.txt  xp-to-7.diff  xp-to-7.txt
dlls/: CMakeLists.txt  ShellItemArray.cpp  ShellItemArray.hpp
dlls/v2xcrt/: v2xcrt.c  v2xcrt.def
dlls/v2xctl32/: resource.h  taskdlg.h  v2xctl32.c  v2xctl32.def  v2xctl32_res.rc
dlls/v2xctl32/lang/: en_US.rc  ja_JP.rc
dlls/v2xker32/: v2xker32.c  v2xker32.def
dlls/v2xol/: FileDialog.cpp  FileDialog.hpp  FileDialog_common.hpp  ShellItemArray.hpp  v2xol.cpp  v2xol.def
dlls/v2xsh32/: v2xsh32.c  v2xsh32.cpp  v2xsh32.def
dlls/v2xu32/: v2xu32.c  v2xu32.def
include/: targetver.h  targetvervista.h
tdm_gcc_include/: _mingw_unicode.h  shobjidl.h
tests/: CMakeLists.txt
tests/filedlg/: filedlg.cpp
tests/folder/: CMakeLists.txt  folder.cpp
tests/localized/: CMakeLists.txt  localized.cpp
tests/memcpy/: memcpy.c
tests/multifile/: CMakeLists.txt  multifile.cpp
tests/opendlg/: CMakeLists.txt  opendlg.cpp
tests/regtest/: CMakeLists.txt  regtest.c
tests/savedlg/: CMakeLists.txt  savedlg.cpp
tests/taskdlg/: CMakeLists.txt  taskdlg.c  taskdlg_res.rc
tests/taskdlgi/: CMakeLists.txt  taskdlgi.c  taskdlgi_res.rc
tests/winverex/: CMakeLists.txt  memo.txt  winverex.c  winverex_res.rc
tests/winverex/res/: Manifest_1.manifest
v2xadv32/: CMakeLists.txt  v2xadv32.c  v2xadv32.def
v2xcrt/: CMakeLists.txt  v2xcrt.c  v2xcrt.def
v2xctl32/: CMakeLists.txt  resource.h  taskdlg.h  v2xctl32.c  v2xctl32.def  v2xctl32_res.rc
v2xctl32/lang/: en_US.rc  ja_JP.rc
v2xker32/: CMakeLists.txt  v2xker32.c  v2xker32.def
v2xol/: CMakeLists.txt  FileDialog.cpp  FileDialog.hpp  FileDialog_common.hpp  FileDialog_inl.hpp  ShellItemArray.cpp  v2xol.cpp  v2xol.def
v2xsh32/: CMakeLists.txt  v2xsh32.cpp  v2xsh32.def
v2xu32/: CMakeLists.txt  v2xu32.c  v2xu32.def
vista2xp/: CMakeLists.txt  ExeImage.hpp  JustDoIt.cpp  pdelayload.h  resource.h  vista2xp.c  vista2xp.cpp  vista2xp_res.rc
vista2xp/lang/: en_US.rc  ja_JP.rc
vista2xp/res/: Manifest_1.manifest
