
# taskdlg.exe
add_subdirectory(taskdlg)

# taskdlgi.exe
add_subdirectory(taskdlgi)

# regtest.exe
add_subdirectory(regtest)

# opendlg.exe
add_subdirectory(opendlg)

# savedlg.exe
add_subdirectory(savedlg)

# multifile.exe
add_subdirectory(multifile)

# folder.exe
add_subdirectory(folder)

# localized.exe
add_subdirectory(localized)

# winverex.exe
add_subdirectory(winverex)
